# cardiac_benchmark

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  _config.yml  _toc.yml  benchmark.py  environment.yml  geometry.py  material.py  microstructure.py  postprocess.py  pressure_model.py  problem.py  pyproject.toml  run_cases.py  run_step1.py  run_step2.py  solver.py  step1.py  step1.sbatch  submit.sbatch
.github/workflows/: build_docs.yml  tests.yml
Latex/: time_scheme.tex
data/: computed_vols.npz  displacement_points.npz
docker/: Dockerfile
docs/: about.md  api.rst  problem.md  refs.bib  solver.md  time_scheme.md  volume.md
scripts/: README.md  benchmark2_coarse.sbatch  benchmark2_fine.sbatch  gather_step1.py  gather_step2.py  get_features.py  plot_comparison.py  rclone.sbatch  run_benchmark.py  run_step1.py  run_step2.py  step0-casea.sbatch  step0-caseb.sbatch  step0.sbatch  step1.sbatch  step2.sbatch
src/cardiac_benchmark/: __init__.py  activation_model.py  benchmark.py  benchmark1.py  benchmark2.py  cli.py  geometry.py  material.py  microstructure.py  postprocess.py  pressure_model.py  problem.py  solver.py  step2.py  utils.py
tests/: test_active_model.py  test_cli.py  test_geometry.h5  test_postprocess.py  test_pressue_model.py
tests/data/: benchmark1_step0_caseA.npy  benchmark1_step0_caseB.npy  benchmark1_step1.npy
