[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "cardiac-benchmark"
version = "0.2.0"
description = "Cardiac benchmark by Simula Research Laboratory"
authors = [
    {name = "Henrik Finsberg", email = "henriknf@simula.no"},
    {name = "Joakim Sundnes", email = "sundnes@simula.no"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "rich",
    "numpy",
    "matplotlib",
    "scipy",
    "h5py",
    "meshio",
    "importlib-metadata; python_version < '3.8'"
]

[project.scripts]
cardiac-benchmark = "cardiac_benchmark.cli:app"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
docs = [
   "jupyter-book",
   "ipython!=8.7.0"
]
all = [
   "cardiac-benchmark[test]",
   "cardiac-benchmark[docs]",
   "cardiac-benchmark[dev]"
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
addopts = [
   "--cov=cardiac_benchmark",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]
